--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,8 @@
     <string name="titleNameInSplashActivity">MASROOFE</string>
     <string name="mainTitleInLoginActivity">مرحبًا بك في تطبيق مصروفي</string>
     <string name="noteInLoginActivity">حان الوقت لتعرف\n وين راتبك بطير</string>
-    <string name="emailTitle">اسم المستخدم أو البريد الإلكتروني</string>
+    <string name="emailTitle">البريد الإلكتروني</string>
+    <string name="usernameTitle">اسم المستخدم</string>
     <string name="passwordTitle">كلمة السر</string>
     <string name="email">Email or Username</string>
     <string name="password">Password</string>
@@ -13,9 +14,8 @@
     <string name="createAccount">أنشِئ حسابك</string>
     <string name="full_name">الاسم الكامل</string>
     <string name="full_name_hint">Full Name</string>
-    <string name="birth_day">تاريخ الميلاد</string>
-    <string name="birthday_hint">Birthday</string>
-    <string name="email_hint">Email or Username</string>
+    <string name="email_hint">Email</string>
+    <string name="username_hint">Username</string>
     <string name="repeatPassword">إعادة كتابة كلمة السر</string>
     <string name="repeat_password_hint">Repeat New Password</string>
     <string name="fixed_income_message">هل تمتلك دخلًا ثابتًا ؟\nاضغط التالي لتزويدنا ببعض المعلومات</string>
@@ -50,6 +50,7 @@
     <string name="last_month_expenses">مجموع مدخرات الشهر الماضي</string>
     <string name="month">الشهر</string>
     <string name="year">السنة</string>
+    <string name="logout">تسجيل الخروج</string>
 
     <string-array name="type_incomes">
         <item>يومي</item>
@@ -80,6 +81,6 @@
         <item>9</item>
         <item>10</item>
         <item>11</item>
-        <item>12</item>s
+        <item>12</item>
     </string-array>
 </resources>
