--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@
     <string name="logout">تسجيل الخروج</string>
     <string name="UpdateFixedIncome">تحديث قيمة الدخل الشهري الثابت</string>
     <string name="Update">تحديث</string>
+    <string name="cash">Cash Available</string>
 
     <string-array name="type_incomes">
         <item>يومي</item>
