--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,4 +86,7 @@
         <item>11</item>
         <item>12</item>
     </string-array>
+    <string-array name="Choose">
+        <item>اختر الحساب</item>
+    </string-array>
 </resources>
